# Backend_Physical_AI_and_Humanoid_Robotic_Course_Book

./: README.md  connections.py  pyproject.toml  requirements.txt  run_ingestion.py  urls.txt
app/: ingestion.py  main.py  rag.py
