[project]
name = "rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.0",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.13.0",
    "python-dotenv>=1.2.1",
    "qdrant-client==1.10.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
